# MEGA_-DEFI-

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  ENV_CONFIG_GUIDE.md  FINAL_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  IMPORT_EXPORT_VALIDATION_REPORT.md  INSTALL.md  INSTALLATION_GUIDE.md  ISSUE_RESOLUTION_SUMMARY.md  LICENSE  MANIFEST.in  OPERATIONAL_READINESS.md  OPERATIONS-GUIDE.md  PHASE1_COMPLETE.md  QUICKSTART.md  README.md  RETRY_BACKOFF_GUIDE.md  STRATEGY_USAGE_GUIDE.md  SYSTEM_LAUNCH_OUTPUT_EXAMPLE.md  SYSTEM_VALIDATION_REPORT.md  TESTING.md  TEST_REPORT.md  VALIDATION_COMPLETE.md  VALIDATION_QUICK_REFERENCE.md  omni_strategy_engine.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  system_launch.bat  system_launch.sh  test_phase1_integration.py  tsconfig.json  validate_system.py
apex_core/: Cargo.toml
apex_core/src/: lib.rs
engines/benches/: Cargo.toml
engines/benches/benches/: engine_bench.rs
engines/benches/src/: lib.rs
engines/executor/: Cargo.toml
engines/executor/src/: lib.rs
engines/math_engine/: Cargo.toml
engines/math_engine/src/: lib.rs
engines/telemetry/: Cargo.toml
engines/telemetry/src/: lib.rs
engines/tx_engine/: Cargo.toml
engines/tx_engine/src/: lib.rs
examples/: advanced_simulation.py  basic_usage.py  env_config_demo.py  production_strategies_demo.py  retryClientDemo.ts  retry_client_demo.py  synchronized_demo.py
mega_defi/: __init__.py  config.py  profit_machine.py
mega_defi/core/: intelligence_layer.py  market_analyzer.py  profit_optimizer.py  retry_client.py  risk_manager.py  strategy_engine.py
mega_defi/data_sources/: __init__.py  market_data_aggregator.py  news_processor.py  onchain_analytics.py  sentiment_analyzer.py  whale_tracker.py
mega_defi/ml/: __init__.py  deep_learning_predictor.py  ensemble_model.py  genetic_algorithm.py  reinforcement_learning.py
mega_defi/strategies/: __init__.py  base_strategy.py  cross_chain_arbitrage.py  flash_loan_arbitrage.py  liquidation_hunter.py  mev_strategy.py  statistical_arbitrage.py  strategy_registry.py  yield_optimizer.py
src/: config.ts  main.ts
src/core/: opportunityDetector.ts  retryClient.ts
tests/: test_comprehensive_strategies.py  test_data_sources.py  test_edge_cases.py  test_end_to_end.py  test_import_export_validation.py  test_market_analyzer.py  test_ml_components.py  test_profit_machine.py  test_profit_optimizer.py  test_retry_client.py  test_risk_manager.py  test_strategies.py  test_strategy_engine.py
