[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mega-defi"
version = "1.0.0"
description = "An unstoppable profit-generating system for decentralized finance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["defi", "trading", "algorithmic-trading", "cryptocurrency", "profit-machine"]
authors = [
    {name = "FX Genius LLC", email = "contact@fxgeniusllc.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No external dependencies - pure Python implementation
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/fxgeniusllc-oss/MEGA_-DEFI-"
Repository = "https://github.com/fxgeniusllc-oss/MEGA_-DEFI-"
Issues = "https://github.com/fxgeniusllc-oss/MEGA_-DEFI-/issues"

[tool.setuptools]
packages = ["mega_defi", "mega_defi.core", "mega_defi.strategies", "mega_defi.ml", "mega_defi.data_sources"]

[tool.setuptools.package-data]
mega_defi = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.eggs
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
