[package]
name = "apex_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
executor = { path = "../engines/executor" }
math_engine = { path = "../engines/math_engine" }
telemetry = { path = "../engines/telemetry" }
tx_engine = { path = "../engines/tx_engine" }
